--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
-  - "0.11"
   - "0.10"
+  - "0.11"
+  - "0.12"
+  - "iojs"
+  - "node"
+branches:
+  except:
+    - /^v[0-9]/
