--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: node_js
 node_js:
   - "0.10"
   - "0.11"
-  - "0.12"
-  - "iojs"
   - "node"
+  - "iojs"
 branches:
+  only:
+    - master
   except:
     - /^v[0-9]/
