--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "example": "example",
     "test": "test"
   },
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "tap test/*.js"
   },
@@ -23,6 +26,9 @@
     "stream"
   ],
   "devDependencies": {
+    "beautify-benchmark": "^0.2.4",
+    "benchmark": "^2.1.1",
+    "seedrandom": "^2.4.2",
     "tap": "^1.2.0"
   },
   "engines": {
